--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-meta-tags": "^0.7.4",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.4.3"
