--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-snap": "^1.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sitemap": "babel-node sitemap-generator.js"
+    "sitemap": "babel-node sitemap-generator.js",
+    "postbuild": "react-snap" 
   },
   "eslintConfig": {
     "extends": "react-app"
