--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.4.3",
-    "react-snap": "^1.23.0"
+    "react-snap": "^1.23.0",
+    "sitemap-generator": "^8.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sitemap": "babel-node sitemap-generator.js",
-    "postbuild": "react-snap" 
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": "react-app"
